crates/vvv/tests/corpus/snapshots/rust-navigation__schema-history__human.snap
---
source: crates/vvv/tests/corpus.rs
expression: "corpus.run(args, false)"
---
exit 0
--- stdout ---
{
  "$id": "urn:vvv:schema:1:history:arguments:c25e2767619054110dab6753f461574ebebbc91dd79bdacf1051b05091c16f8d",
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {},
  "required": [],
  "title": "history arguments",
  "type": "object"
}
--- stderr ---
